tests/ui/const-generics/generic_const_parameter_types/lifetime_dependent_const_param_default.stderr
error: defaults for generic parameters are not allowed here
  --> $DIR/lifetime_dependent_const_param_default.rs:13:12
   |
LL | fn foo<'a, const N: &'a Variant = {}>() {}
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^

error: anonymous constants with lifetimes in their type are not yet supported
  --> $DIR/lifetime_dependent_const_param_default.rs:13:35
   |
LL | fn foo<'a, const N: &'a Variant = {}>() {}
   |                                   ^^

error: `&'a Variant` is forbidden as the type of a const generic parameter
  --> $DIR/lifetime_dependent_const_param_default.rs:13:21
   |
LL | fn foo<'a, const N: &'a Variant = {}>() {}
   |                     ^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`
help: add `#![feature(min_adt_const_params)]` to the crate attributes to enable more complex and user defined types
   |
LL + #![feature(min_adt_const_params)]
   |
help: add `#![feature(unsized_const_params)]` to the crate attributes to enable references to implement the `ConstParamTy` trait
   |
LL + #![feature(unsized_const_params)]
   |

error: aborting due to 3 previous errors

